// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<RoleBadge /> > renders expected markup 1`] = `
<div>
  <div
    class="rounded-sm px-1 inline-block font-bold whitespace-nowrap bg-green-600 text-white"
  >
    admin
  </div>
</div>
`;

exports[`<RoleBadge /> > renders expected markup 2`] = `
<div>
  <div
    class="rounded-sm px-1 inline-block font-bold whitespace-nowrap bg-gray-500 text-white"
  >
    advanced user
  </div>
</div>
`;

exports[`<RoleBadge /> > renders expected markup 3`] = `
<div>
  <div
    class="rounded-sm px-1 inline-block font-bold whitespace-nowrap bg-gray-500 text-white"
  >
    managed user
  </div>
</div>
`;
